--- a/public/olympus/01-LandingPage.html
+++ b/public/olympus/01-LandingPage.html
@@ -286,7 +286,7 @@
 			
 									<div class="form-group date-time-picker label-floating">
 										<label class="control-label">Your Birthday</label>
-										<input name="datetimepicker" value="10/24/1984" />
+										<input  name="datetimepicker" value="10/24/1984" />
 										<span class="input-group-addon">
 														<svg class="olymp-calendar-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-calendar-icon"></use></svg>
 													</span>
@@ -364,38 +364,38 @@
 
 <!-- JS Scripts -->
 <script src="js/jquery-3.2.1.js"></script>
-<script src="js/jquery.appear.js"></script>
-<script src="js/jquery.mousewheel.js"></script>
-<script src="js/perfect-scrollbar.js"></script>
-<script src="js/jquery.matchHeight.js"></script>
-<script src="js/svgxuse.js"></script>
-<script src="js/imagesloaded.pkgd.js"></script>
-<script src="js/Headroom.js"></script>
-<script src="js/velocity.js"></script>
-<script src="js/ScrollMagic.js"></script>
-<script src="js/jquery.waypoints.js"></script>
-<script src="js/jquery.countTo.js"></script>
+<!--<script src="js/jquery.appear.js"></script>-->
+<!--<script src="js/jquery.mousewheel.js"></script>-->
+<!--<script src="js/perfect-scrollbar.js"></script>-->
+<!--<script src="js/jquery.matchHeight.js"></script>-->
+<!--<script src="js/svgxuse.js"></script>-->
+<!--<script src="js/imagesloaded.pkgd.js"></script>-->
+<!--<script src="js/Headroom.js"></script>-->
+<!--<script src="js/velocity.js"></script>-->
+<!--<script src="js/ScrollMagic.js"></script>-->
+<!--<script src="js/jquery.waypoints.js"></script>-->
+<!--<script src="js/jquery.countTo.js"></script>-->
 <script src="js/popper.min.js"></script>
 <script src="js/material.min.js"></script>
 <script src="js/bootstrap-select.js"></script>
-<script src="js/smooth-scroll.js"></script>
-<script src="js/selectize.js"></script>
-<script src="js/swiper.jquery.js"></script>
+<!--<script src="js/smooth-scroll.js"></script>-->
+<!--<script src="js/selectize.js"></script>-->
+<!--<script src="js/swiper.jquery.js"></script>-->
 <script src="js/moment.js"></script>
 <script src="js/daterangepicker.js"></script>
-<script src="js/simplecalendar.js"></script>
-<script src="js/fullcalendar.js"></script>
-<script src="js/isotope.pkgd.js"></script>
-<script src="js/ajax-pagination.js"></script>
-<script src="js/Chart.js"></script>
-<script src="js/chartjs-plugin-deferred.js"></script>
-<script src="js/circle-progress.js"></script>
-<script src="js/loader.js"></script>
-<script src="js/run-chart.js"></script>
-<script src="js/jquery.magnific-popup.js"></script>
-<script src="js/jquery.gifplayer.js"></script>
-<script src="js/mediaelement-and-player.js"></script>
-<script src="js/mediaelement-playlist-plugin.min.js"></script>
+<!--<script src="js/simplecalendar.js"></script>-->
+<!--<script src="js/fullcalendar.js"></script>-->
+<!--<script src="js/isotope.pkgd.js"></script>-->
+<!--<script src="js/ajax-pagination.js"></script>-->
+<!--<script src="js/Chart.js"></script>-->
+<!--<script src="js/chartjs-plugin-deferred.js"></script>-->
+<!--<script src="js/circle-progress.js"></script>-->
+<!--<script src="js/loader.js"></script>-->
+<!--<script src="js/run-chart.js"></script>-->
+<!--<script src="js/jquery.magnific-popup.js"></script>-->
+<!--<script src="js/jquery.gifplayer.js"></script>-->
+<!--<script src="js/mediaelement-and-player.js"></script>-->
+<!--<script src="js/mediaelement-playlist-plugin.min.js"></script>-->
 
 <script src="js/base-init.js"></script>
 
